# openapi-burrito

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: 01-introduction.md  02-authentication.md  03-middleware.md  04-type-system.md  05-cli-reference.md  06-contributing.md
examples/artifactsmmo/: README.md  main.py  openapi.json
examples/petstore/: README.md  main.py
openapi_burrito/: __init__.py  cli.py  generator.py  preview.py  utils.py
openapi_burrito/parser/: lookup.py  models.py  operation.py  sanitize.py  schema.py  types.py
openapi_burrito/templates/: __init__.py.jinja2  client.py.jinja2  models.py.jinja2  pyproject.toml.jinja2
