[project]
name = "openapi-burrito"
version = "0.1.0"
description = "A lightweight CLI tool to generate a type-safe Python client from an OpenAPI specification."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Simon Lund", email = "simon.lund@lmu.de"}
]
keywords = [
    "openapi",
    "openapi-fetch",
    "swagger",
    "type-safe",
    "code-generation",
    "sdk-generator",
    "httpx",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openapi-spec-validator>=0.7.2",
    "prance>=25.4.8.0",
    "pyyaml>=6.0.3",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/simon-lund/openapi-burrito"
Documentation = "https://github.com/simon-lund/openapi-burrito#readme"
Repository = "https://github.com/simon-lund/openapi-burrito.git"
Issues = "https://github.com/simon-lund/openapi-burrito/issues"

[project.scripts]
# Run all quality checks
check = { composite = ["lint", "typecheck", "test"] }
# Linting and auto-fixing
lint = "ruff check --fix ."
# Type checking
typecheck = "mypy ."
# Testing with coverage
test = "pytest --cov=openapi_burrito"
# CLI entry point
openapi-burrito = "openapi_burrito.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Build Configuration ---

[tool.hatch.build.targets.sdist]
include = ["/openapi_burrito", "/README.md", "/LICENSE"]
exclude = ["examples/", "tests/"]

[tool.hatch.build.targets.wheel]
packages = ["openapi_burrito"]

# --- Tooling Configuration ---

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"] # Error, Flake, Import sort, Upgrade, Naming
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true

# --- Dependency Groups ---

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "cattrs>=25.3.0",
    "respx>=0.21.0", # Great for mocking httpx calls in tests
]